@startuml FreelanceMarket

class User <<Entity>> {
  + activeRole: Role
  + name: String
  + messages: Messages[]
  + sendMessage()
  + changeRole()
}

class Employer <<Entity>> {
  + orders: Order[]
  + searchService(): 
  + buy(): 
  + rateAndComment() 
}

class Freelancer <<Entity>> {
  + country: String
  + description: String
  + orders: Order[]
  + comments: Comments[]
  + specialty: Specialty[]
  + rate: Number
  + jobs: Job[]
  + createJob()
  + startOrder()
  + finishOrder()
  + cancelOrder()
  + updateProfile()
  + addSpecialty()
}

class Order <<Entity>> {
  + job: Job
  + employer: Employer
  + date: String
  + price: Number
  + rating: Number
  + comment: String
  + status: Status[]
}


class Job <<Entity>> {
  + freelancer: Freelancer
  + title: String
  + content: String
  + price: Number
  + deliveryTime: Number
  + employers: Employer[] 
}

enum Role {
  FREELANCER
  EMPLOYER
}

enum Status {
  TODO
  INPROGRESS
  DONE
  CANCELED
}

class Specialty <<ValueObject>> {
  + freelancer: Freelancer
  + field: String
  + experience: Number
}

class Messages <<ValueObject>> {
  + user: User
  + job: Job
  + content: String
}


Employer -up|> User
Freelancer -up-|> User
User "0..n" *--> "0..n" Messages
Freelancer "0..n" *--> "0..n" Job
Job "0..n" *--> "0..n" Order
Employer "0..n" *--> "0..n" Order
Freelancer "0..n" *--> "1..n" Specialty
Role -left- User
Status -left- Order

note left of User : Every user can switch between\n "Employer" and "Freelancer" roles.
note "Order has to have a job and\na employer, in order to be created." as N2
Employer .. N2
N2 .. Order

@enduml
